<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>udp_client_server</name>
  <version>0.0.0</version>
  <description>C++ UDP communication for ROS 2</description>
  <maintainer email="Garrison.L.Johnston@vanderbilt.edu">Garrison Johnston</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
